--- a/kisiwo/lib/kisiwo_web/controllers/page_html/home.html.heex
+++ b/kisiwo/lib/kisiwo_web/controllers/page_html/home.html.heex
@@ -7,30 +7,75 @@
 </head>
 
 <body>
-  <header class="entry-header">
-    <h1 class="entry-header">WILLKOMMEN</h1>
+  <header id="branding">
+    <hgroup>
+      <h1 id="site-title">
+        <span>
+          <a href="/" rel="home">Kisiwo</a>
+        </span>
+      </h1>
+      <h2 id="site-despription">Musische Freizeit für Kinder von 9 - 15 Jahren</h2>
+    </hgroup>
+    <div class="entry-content">
+    <a href="/">
+      <img src={~p"/images/Header_011.jpg"}>
+    </a>
+    </div>
+
+    <nav id="access">
+      <h3 class="assistive-text">Hauptmenue</h3>
+      <div class="menu-menue-container">
+        <ul id="menu-menue" class="menu">
+          <li id="menu-item-35" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-home current-menu-item page_item page-item-6 current_page_item menu-item-35">
+            <a href="/" aria-current="page">WILLKOMMEN</a>
+          </li>
+          <li id="menu-item-36" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-36">
+            <a href="/kisiwo" aria-current="page">DIE KISIWO</a>
+          </li>
+          <li id="menu-item-37" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-34">
+            <a href="/team" aria-current="page">DAS TEAM</a>
+          </li>
+          <li id="menu-item-35" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-has-children menu-item-53">
+            <a href="/contact" aria-current="page">KONTAKT</a>
+          </li>
+        </ul>
+
+      </div>
+    </nav>
   </header>
-  <div class="entry-content">
-  <img src={~p"/images/kisiwo_2024_titelbild1.jpg"} alt="Titelbild KiSiWo 2024">
+
+
+
+  <div style="text-align: center">
+    <header class="entry-header">
+      <h1 class="entry-header m-5">WILLKOMMEN</h1>
+    </header>
+    <div class="entry-content">
+    <img style="height: 300px;  display: block; margin-left: auto; margin-right: auto;" 
+      src={~p"/images/kisiwo_2024_titelbild1.jpg"} alt="Titelbild KiSiWo 2024">
+    </div>
+
+    <p >
+      <strong>
+      <strong><span class="m-3" style="font-family: Kisiwo;">Liebe Kinder!</span></strong>
+      </strong>
+      
+    </p>
+
+    <p class="m-3" style = "max-width: 500px; margin-left: auto; margin-right: auto;">
+      <span  style="font-family: Palatino;">
+        Herzlich willkommen auf der Seite der   <strong><span style="font-family: Kisiwo;">Kisiwo</span></strong>. 
+        Hier findet Ihr alle möglichen Informationen über die 42. 
+         <strong><span style="font-family: Kisiwo;">Kisiwo</span></strong> vom 04. - 10. August 2024, 
+         über die Betreuer, Bilder von den alten  <strong><span style="font-family: Kisiwo;">Kisiwo</span></strong> 
+         und vieles, vieles mehr. 
+      </span>
+    </p>
+
+    <blockquote  >
+      <a class= "border-2 border-rose-600 p-1" style="max-width: 500px; margin-left: auto; margin-right: auto;" href="/users/new">Hier geht es zur Online Anmeldung</a>
+
+    </blockquote>
   </div>
-
-  <p style="text-align: left">
-    <strong>
-    <span style="font-family: Kisiwo;">Liebe Kinder</span>
-    </strong>
-    !
-  </p>
-
-  <p style="text-align: left;">
-    <span style="font-family: Palatino; font-size: 12pt;">
-      Herzlich willkommen auf der Seite der KiSiWo. Hier findet Ihr alle möglichen Informationen über die 42. KiSiWo vom 04. - 10. August 2024, über die Betreuer, Bilder von den alten KiSiWo und vieles, vieles mehr. 
-    </span>
-  </p>
-
-  <blockquote>
-    <a href="/users/new">Hier geht es zur Online Anmeldung</a>
-
-  </blockquote>
-
 </body>
 </html>
