--- a/lib/kisiwo_web/live/users_live/index.html.heex
+++ b/lib/kisiwo_web/live/users_live/index.html.heex
@@ -11,7 +11,6 @@
   id="users"
   rows={@streams.users_collection}
   row_click={fn {_id, users} -> JS.navigate(~p"/users/#{users}") end}>
-
   <:col :let={{_id, users}} label="Vorname"><%= users.vorname %></:col>
   <:col :let={{_id, users}} label="Nachname"><%= users.nachname %></:col>
   <:col :let={{_id, users}} label="Straße"><%= users.straße %></:col>
@@ -31,7 +30,9 @@
   <:col :let={{_id, users}} label="Essen"><%= users.essen %></:col>
   <:col :let={{_id, users}} label="Kommentar"><%= users.kommentar %></:col>
   <:col :let={{_id, users}} label="Fotos"><%= users.fotos %></:col>
-  <:col :let={{_id, users}} label="Persönliches Gespräch"><%= users.persoenliches_gespraech %></:col>
+  <:col :let={{_id, users}} label="Persönliches Gespräch">
+    <%= users.persoenliches_gespraech %>
+  </:col>
   <:col :let={{_id, users}} label="Teilnahmebedingungen"><%= users.teilnahmebedingungen %></:col>
   <:action :let={{_id, users}}>
     <div class="sr-only">
@@ -60,6 +61,8 @@
   />
 </.modal>
 
-<.link patch={~p"/"} class="back-button">
+<div style="text-align: center">
+  <.link patch={~p"/"} class="back-button">
     <.button>Zurück zur Startseite</.button>
   </.link>
+</div>
